--- a/pasta-bolo.html
+++ b/pasta-bolo.html
@@ -6,7 +6,7 @@
     <title>Recepten / Pasta gremolata met ricotta</title>
 </head>
 <body>
-    <h1>3 Awesome Family Pasta Recipes</h1>
+    <h1>Tomato Blast</h1>
     <ul>
 
 <li><a href="index.html">Cheesy pasta</a></li>
@@ -14,7 +14,7 @@
 <li><a href="pasta-pesto.html">Thick Mozarella</a></li>
 
     </ul>
-<img src="images/bolo.jpg" width="300" height="250" > 
+<img src="images/pasta.jpg" width="300" height="250" > 
 
 <h2>Ingredienten</h2>
 
@@ -25,24 +25,28 @@
 <li>Garlic (minced or thinly sliced)</li>
 <li>Tomatoes (fresh or canned, for the sauce)</li>
 <li>Parmesan cheese (grated, for topping)</li>
+<li>50g Parmesan cheese (grated)</li>
+<li>150g fresh mozzarella (torn into pieces)</li>
 
 </ul>
 
 <H2> Steps </H2>
 
-<ul>
 
-   
+<ol> 
 
-<li>Bring a large pot of salted water to a boil.
 
-    Add the pasta and cook according to the package instructions (usually 8-12 minutes) until al dente.
-    Drain the pasta, reserving a cup of pasta water for the sauce.</li>
+<li>Toss Pasta with Pesto:
 
-<li>auté Garlic:
+    In a large bowl, toss the cooked pasta with the freshly made pesto.
+    If the sauce is too thick, add a spoonful of the reserved pasta water to loosen it up.</li>
 
-    While the pasta cooks, heat olive oil in a large pan over medium heat.
-    Add minced garlic and sauté until fragrant, about 1-2 minutes. Be careful not to burn it.</li>    S
+<li>Prepare the Pesto:
+
+    In a food processor or blender, combine the basil leaves, pine nuts, garlic, and Parmesan cheese.
+    Pulse until finely chopped.
+    Slowly add the olive oil while blending until you reach a smooth, thick consistency.
+    Season with salt and pepper to taste.</li>    S
 
 <li>Make the Sauce:
 
@@ -61,8 +65,9 @@
     Garnish with fresh basil, if desired.
     Enjoy your homemade pasta dish!</li>
 
+</ol>
 
-</ul>
+
 
 
 </body>
