--- a/pasta-pesto.html
+++ b/pasta-pesto.html
@@ -6,7 +6,7 @@
     <title>Recepten / Pasta gremolata met ricotta</title>
 </head>
 <body>
-    <h1>3 Awesome Family Pasta Recipes</h1>
+    <h1>Thick Mozarella</h1>
     <ul>
 
 <li><a href="index.html">Cheesy pasta</a></li>
@@ -14,7 +14,7 @@
 <li><a href="pasta-pesto.html">Thick Mozarella</a></li>
 
     </ul>
-<img src="images/bolo.jpg" width="300" height="250" > 
+<img src="images/maalti.jpg" width="300" height="250" > 
 
 <h2>Ingredienten</h2>
 
@@ -24,7 +24,9 @@
 <li>Olive oil</li>
 <li>Garlic (minced or thinly sliced)</li>
 <li>Tomatoes (fresh or canned, for the sauce)</li>
-<li>Parmesan cheese (grated, for topping)</li>
+<li>150g fresh mozzarella (torn into pieces)</li>
+<li>300g cherry tomatoes (halved)</li>
+<li>Fresh basil leaves</li>
 
 </ul>
 
@@ -34,10 +36,11 @@
 
    
 
-<li>Bring a large pot of salted water to a boil.
+<li>Cook the Pasta:
 
-    Add the pasta and cook according to the package instructions (usually 8-12 minutes) until al dente.
-    Drain the pasta, reserving a cup of pasta water for the sauce.</li>
+    Bring a large pot of salted water to a boil.
+    Add the pasta and cook according to the package instructions until al dente.
+    Drain the pasta, reserving a cup of pasta water.</li>
 
 <li>auté Garlic:
 
@@ -50,10 +53,10 @@
     Season with salt, pepper, and chili flakes (optional).
     If the sauce is too thick, add a little of the reserved pasta water to loosen it.</li>    
 
-<li>Combine Pasta and Sauce:
+<li>Add Mozzarella:
 
-    Add the drained pasta to the pan with the sauce.
-    Toss everything together to coat the pasta with the sauce evenly. Cook for another 1-2 minutes.</li>
+    Remove the pan from the heat.
+    Gently toss in the torn mozzarella pieces, allowing them to slightly melt from the heat of the pasta.</li>
     
 <li>Serve:
 
